# Overcooked_NJU

./: .gitignore  README.md  overview.md
overcooked-2022/: makefile
overcooked-2022-strategy1/include/: actions.h  common.h
overcooked-2022-strategy1/source/: actions.cpp  framework.cpp  interact.cpp  main.cpp  putorpick.cpp  search_path.cpp
overcooked-2022-strategy10/: CMakeLists.txt
overcooked-2022-strategy10/maps/level1/: level1-2.txt
overcooked-2022-strategy10/maps/level3/: level3-3.txt
overcooked-2022-strategy10/source/: framework.cpp  interact.cpp  search_path.cpp
overcooked-2022-strategy11/include/: enum.h  framework.h  search_path.h
overcooked-2022-strategy11/source/: interact.cpp  move.cpp  search_path.cpp
overcooked-2022-strategy12/include/: common.h  move.h
overcooked-2022-strategy12/source/: common.cpp  framework.cpp  move.cpp
overcooked-2022-strategy13/include/: search_path.h
overcooked-2022-strategy13/source/: move.cpp  putorpick.cpp  search_path.cpp
overcooked-2022-strategy14/include/: common.h
overcooked-2022-strategy14/source/: common.cpp  framework.cpp  move.cpp
overcooked-2022-strategy15/include/: enum.h  framework.h
overcooked-2022-strategy15/source/: astar.cpp  decide.cpp  execute.cpp  framework.cpp  main.cpp  utility.cpp
overcooked-2022-strategy2/: .gitignore
overcooked-2022-strategy2/include/: common.h
overcooked-2022-strategy2/source/: framework.cpp
overcooked-2022-strategy3/: README.md
overcooked-2022-strategy6/: CMakeLists.txt  makefile
overcooked_ppts/: A_star寻路与移动.pptx  固定任务策略与贪心优化.pptx  项目介绍.pptx
(+84 files in other folders)
